--- a/course3/conFusion/package.json
+++ b/course3/conFusion/package.json
@@ -2,7 +2,6 @@
   "name": "conFusion",
   "private": true,
   "devDependencies": {
-    "browser-sync": "^2.10.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-cache": "^0.4.1",
@@ -16,6 +15,7 @@
     "gulp-rev": "^6.0.1",
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
+    "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0"
   },
   "engines": {
