--- a/course3/conFusion/package.json
+++ b/course3/conFusion/package.json
@@ -7,6 +7,7 @@
     "gulp-cache": "^0.4.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-foreach": "^0.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.2",
