--- a/course5/node-mongoose/package.json
+++ b/course5/node-mongoose/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "dependencies": {
     "assert": "^1.3.0",
-    "mongoose": "^4.4.10"
+    "mongoose": "^4.4.10",
+    "mongoose-currency": "^0.2.0"
   },
   "devDependencies": {}
 }
